using System;

namespace DDDNetCore.Domain.Credential
{
    public enum Role
    {
        ADMIN,
        DOCTOR,
        NURSE,
        GENERAL_STAFF,
        PATIENT,
        UNKNOWN
    }
}