using System;

namespace DDDNetCore.Domain.Credential
{
    public enum Status
    {
        NEW,
        ACTIVE,
        INACTIVE,
        SUSPENDED
    }
}