namespace DDDNetCore.Domain.Families;

public class AppointmentHistory
{
    
}