namespace DDDNetCore.Domain.Families;

public class ContactInformation
{
    
}