namespace DDDNetCore.Domain.Families;

public class DateOfBirth
{
    
}