namespace DDDNetCore.Domain.Families;

public class EmergencyContact
{
    
}