namespace DDDNetCore.Domain.Families;

public class Gender
{
    
}