namespace DDDNetCore.Domain.Families;

public class MedicalRecordNumber
{
    
}