using System.Collections.Generic;
using System.Runtime.InteropServices.JavaScript;
using DDDNetCore.Domain.Shared;

namespace DDDNetCore.Domain.Families;

public class AllergiesMedicalConditions : IValueObject
{
    public List<string> allergiesMedicalConditions { get; private set; }

    public AllergiesMedicalConditions()
    {
    }

    public AllergiesMedicalConditions(List<string> dtoAllergiesMedicalConditions)
    {
        this.allergiesMedicalConditions = dtoAllergiesMedicalConditions;
    }
}